cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@namespaced_entities.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/namespaced_entities.cedarschema
---
{
  "MyApp": {
    "actions": {
      "view": {
        "appliesTo": {
          "principalTypes": [
            "MyApp::User"
          ],
          "resourceTypes": [
            "MyApp::User"
          ]
        }
      }
    },
    "entityTypes": {
      "User": {
        "shape": {
          "attributes": {
            "name": {
              "type": "__cedar::String"
            }
          },
          "type": "Record"
        }
      }
    }
  }
}
