cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@optional_attributes.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/optional_attributes.cedarschema
---
{
  "": {
    "actions": {},
    "entityTypes": {
      "User": {
        "shape": {
          "attributes": {
            "email": {
              "required": false,
              "type": "__cedar::String"
            },
            "name": {
              "type": "__cedar::String"
            },
            "phone": {
              "required": false,
              "type": "__cedar::String"
            }
          },
          "type": "Record"
        }
      }
    }
  }
}
